[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Interfacea/bar/LifeBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Interfacea/bar/bar.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Interfacea/mana_bar/ManaBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Interfacea/VBoxContainer.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Runes/rune2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/interface/counter/label_bg.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Runes/rune3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Runes/rune4.png" type="Texture" id=8]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Bars" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 530.0
margin_bottom = 127.0
size_flags_horizontal = 3

[node name="LifeBar" parent="Bars" instance=ExtResource( 1 )]
margin_right = 550.0
script = ExtResource( 2 )

[node name="ManaBar" parent="Bars" instance=ExtResource( 3 )]
margin_top = 57.0
margin_right = 550.0
margin_bottom = 110.0

[node name="Items" type="HBoxContainer" parent="."]
margin_left = 1274.0
margin_top = 30.0
margin_right = 1854.0
margin_bottom = 140.0
alignment = 2
script = ExtResource( 4 )

[node name="ItemA1" type="NinePatchRect" parent="Items"]
visible = false
margin_left = 122.0
margin_right = 272.0
margin_bottom = 110.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 6 )

[node name="Title" type="TextureRect" parent="Items/ItemA1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -122.0
margin_right = -21.0
margin_bottom = -82.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 5 )
stretch_mode = 4

[node name="ItemA2" type="NinePatchRect" parent="Items"]
visible = false
margin_left = 276.0
margin_right = 426.0
margin_bottom = 110.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 6 )

[node name="Title" type="TextureRect" parent="Items/ItemA2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -68.75
margin_top = -122.0
margin_right = -19.75
margin_bottom = -82.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 8 )
stretch_mode = 4

[node name="ItemA3" type="NinePatchRect" parent="Items"]
visible = false
margin_left = 430.0
margin_right = 580.0
margin_bottom = 110.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 6 )

[node name="Title" type="TextureRect" parent="Items/ItemA3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -122.0
margin_right = -21.0
margin_bottom = -82.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 7 )
stretch_mode = 4
